# rust_sha256

./: .gitignore  Cargo.toml  README.md  build-opt.sh  build.sh
src/: lib.rs  main.rs  unit_tests.rs  wasi.rs
src/sha256/: mod.rs
src/wasi/: interface.rs  mod.rs
