[package]
name = "sha256"
version = "1.0.0"
authors = ["ChrisWhealy <chris@whealy.com>"]
description = "Calculate the SHA256 Hash"
repository = "https://github.com/ChrisWhealy/rust_sha256"
edition = "2024"
license = "MIT"

[dependencies]
# metadata wasi-0.2.4
wasi = "0.14.2"
wee_alloc = "0.4"

[[bin]]
name = "std"
path = "src/bin/std.rs"

[[bin]]
name = "wasi"
path = "src/bin/wasi.rs"
